// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Presence > batching > LatestValueManager > batches signals from multiple workspaces > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1070,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1050,
            "value": {
              "num": 34
            }
          }
        }
      },
      "s:name:testStateWorkspace2": {
        "note": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1060,
            "value": {
              "message": "final message"
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > batches signals sent within a specified allowableUpdateLatency > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1110,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1100,
            "value": {
              "num": 34
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > batches signals sent within a specified allowableUpdateLatency > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1240,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 5,
            "timestamp": 1220,
            "value": {
              "num": 90
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > batches signals sent within default allowableUpdateLatency > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1070,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 3,
            "timestamp": 1060,
            "value": {
              "num": 22
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > batches signals sent within default allowableUpdateLatency > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1150,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 6,
            "timestamp": 1140,
            "value": {
              "num": 90
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > batches signals with different allowed latencies > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1060,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1050,
            "value": {
              "num": 34
            }
          }
        },
        "note": {
          "sessionId-2": {
            "rev": 1,
            "timestamp": 1020,
            "value": {
              "message": "will be queued"
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > queued signal is sent immediately with immediate update message > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        },
        "immediateUpdate": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > queued signal is sent immediately with immediate update message > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1110,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1100,
            "value": {
              "num": 34
            }
          }
        },
        "immediateUpdate": {
          "sessionId-2": {
            "rev": 1,
            "timestamp": 1110,
            "value": {
              "num": 56
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > sends signal immediately when allowable latency is 0 > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1010,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > sends signal immediately when allowable latency is 0 > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1020,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 1,
            "timestamp": 1020,
            "value": {
              "num": 42
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > sends signal immediately when allowable latency is 0 > submitted signal 3`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1020,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 2,
            "timestamp": 1020,
            "value": {
              "num": 84
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > LatestValueManager > sets timer for default allowableUpdateLatency > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1070,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1010,
            "value": {
              "num": 0
            }
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > NotificationsManager > notification signals cause queued messages to be sent immediately > submitted signal 1`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1060,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "s:name:testStateWorkspace": {
        "count": {
          "sessionId-2": {
            "rev": 3,
            "timestamp": 1040,
            "value": {
              "num": 56
            }
          }
        }
      },
      "n:name:testNotificationWorkspace": {
        "testEvents": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1060,
            "value": {
              "name": "newId",
              "args": [
                99
              ]
            },
            "ignoreUnmonitored": true
          }
        }
      }
    }
  }
]"
`;

exports[`Presence > batching > NotificationsManager > notification signals cause queued messages to be sent immediately > submitted signal 2`] = `
"[
  "Pres:DatastoreUpdate",
  {
    "sendTimestamp": 1090,
    "avgLatency": 10,
    "data": {
      "system:presence": {
        "clientToSessionId": {
          "client2": {
            "rev": 0,
            "timestamp": 1000,
            "value": "sessionId-2"
          }
        }
      },
      "n:name:testNotificationWorkspace": {
        "testEvents": {
          "sessionId-2": {
            "rev": 0,
            "timestamp": 1090,
            "value": {
              "name": "newId",
              "args": [
                111
              ]
            },
            "ignoreUnmonitored": true
          }
        }
      }
    }
  }
]"
`;
